After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706529 - CSD fixes for mutter/gnome-shell
CSD fixes for mutter/gnome-shell
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-08-21 19:13 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2013-08-22 13:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gtkwindow: Rename title_icon, etc. to titlebar_icon (7.73 KB, patch)
2013-08-21 19:13 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
gtkwindow: Have a separate "titlebar" pointer for decorations we create ourselves (16.27 KB, patch)
2013-08-21 19:13 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
gtkwindow: Split code that detects if we want CSD out (2.40 KB, patch)
2013-08-21 19:13 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
gtkwindow: Disable CSD if we aren't running under a supported WM or are uncomposited (2.05 KB, patch)
2013-08-21 19:13 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
gtkwindow: Enable CSD when windows set a titlebar (1.28 KB, patch)
2013-08-21 19:13 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2013-08-21 19:13:36 UTC
work that mclasen and I discussed today
Comment 1 Jasper St. Pierre (not reading bugmail) 2013-08-21 19:13:39 UTC
Created attachment 252647 [details] [review]
gtkwindow: Rename title_icon, etc. to titlebar_icon

"title_box" is used for both a custom header bar and for a titlebar.
Since we want to help differentiate these cases in the code, rename
everything titlebar-internal to use "titlebar_".
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-08-21 19:13:44 UTC
Created attachment 252648 [details] [review]
gtkwindow: Have a separate "titlebar" pointer for decorations we create ourselves

This cleans up the code a bit.
Comment 3 Jasper St. Pierre (not reading bugmail) 2013-08-21 19:13:47 UTC
Created attachment 252649 [details] [review]
gtkwindow: Split code that detects if we want CSD out

This will get a bit more complex when we enable CSD for custom headerbars
Comment 4 Jasper St. Pierre (not reading bugmail) 2013-08-21 19:13:50 UTC
Created attachment 252650 [details] [review]
gtkwindow: Disable CSD if we aren't running under a supported WM or are uncomposited
Comment 5 Jasper St. Pierre (not reading bugmail) 2013-08-21 19:13:53 UTC
Created attachment 252651 [details] [review]
gtkwindow: Enable CSD when windows set a titlebar
Comment 6 Jasper St. Pierre (not reading bugmail) 2013-08-22 13:42:44 UTC
Attachment 252647 [details] pushed as cae2b69 - gtkwindow: Rename title_icon, etc. to titlebar_icon
Attachment 252648 [details] pushed as a95cabd - gtkwindow: Have a separate "titlebar" pointer for decorations we create ourselves
Attachment 252649 [details] pushed as 7462de8 - gtkwindow: Split code that detects if we want CSD out
Attachment 252651 [details] pushed as 51f2295 - gtkwindow: Enable CSD when windows set a titlebar