gtkwindow: Enable CSD when windows set a titlebar

https://bugzilla.gnome.org/show_bug.cgi?id=706529